# sentinel-faillogs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  README.adoc  bootstrap  configure.ac
.gitlab-ci/: Dockerfile  release.sh
src/: Makefile.am  config.c  config.h  identifier.gperf  log.c  log.h  logread.c  logread.h  parser.c  parser.h  sender.c  sender.h  sentinel_faillogs.c
tests/: Makefile.am  fixtures.c  fixtures.h  logread.c  sender.c  ssh.c  unittests.c  util.h
utils/: gperf.am  lint.am
